--- a/TwitchApp/TwitchApp/TwitchApp.csproj
+++ b/TwitchApp/TwitchApp/TwitchApp.csproj
@@ -6,9 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSCore" Version="1.2.1.2" />
     <PackageReference Include="NAudio" Version="2.0.1" />
+    <PackageReference Include="Selenium.Support" Version="4.1.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
+    <PackageReference Include="System.Speech" Version="6.0.0" />
     <PackageReference Include="TwitchLib" Version="3.3.0" />
+    <PackageReference Include="WebDriverManager" Version="2.12.3" />
   </ItemGroup>
 
 </Project>
